[TASK] Fix overflow height if player is open

--- a/app/menu/topmenu.component.scss
+++ b/app/menu/topmenu.component.scss
@@ -77,6 +77,9 @@ h1 {
     z-index: 13;
     overflow-y: auto;
     overflow-x: hidden;
+    .isPlaying & {
+        height: calc(100% - 100px - 80px);
+    }
 }
 
 .side-nav__content li {
